# camply-ui

./: .gitignore  Dockerfile  README.md  cleanup.sh  docker-compose.yml  pyproject.toml  rec-favorites.json  requirements-custom.txt  setup.py  setup_env.sh  weekend-alerts.yaml
config/: example.yaml
favorites/: README.md  __init__.py  californias-best.py  californias_best.py  generate_index.py  regenerate_reports.py
favorites/templates/: availability_report.html  (+1 more)
logs/: bodega-dunes-sp_2025-06-20_to_2025-09-08.html  bodega-dunes-sp_2025-06-20_to_2025-09-08.json  clear-lake-sp_2025-06-20_to_2025-09-08.html  clear-lake-sp_2025-06-20_to_2025-09-08.json  emerald-bay-sp_2025-06-20_to_2025-09-08.html  emerald-bay-sp_2025-06-20_to_2025-09-08.json  hearst-san-simeon-sp_2025-06-20_to_2025-09-08.html  hearst-san-simeon-sp_2025-06-20_to_2025-09-08.json  index.html  lake-tahoe-basin-management-unit-ca_2025-06-13_to_2025-10-28_20250608_162623.html  lake-tahoe-basin-management-unit-ca_2025-06-13_to_2025-10-28_20250608_162623.json  shasta-trinity-national-forest-ca_2025-06-13_to_2025-10-28_20250608_160959.html  shasta-trinity-national-forest-ca_2025-06-13_to_2025-10-28_20250608_160959.json  tahoe-national-forest-ca_2025-06-13_to_2025-10-28_20250608_162458.json  tahoe-sra-tahoe-city-ca_2025-06-20_to_2025-09-08.html  tahoe-sra-tahoe-city-ca_2025-06-20_to_2025-09-08.json  yosemite-national-park_2025-06-13_to_2025-10-28_20250608_155431.html  yosemite-national-park_2025-06-13_to_2025-10-28_20250608_155431.json
src/: californias_best.py  generate_index.py  regenerate_reports.py
(+3 files in other folders)
